assets/main.css
/* Doodle CSS
 * https://github.com/chr15m/doodle-css
 * Slightly modified by 1hiking to account for paths and unused elements
 */

.doodle * {
  box-sizing: border-box;
}

.doodle {
  background-color: #fdf7f1;
  color: #3c3c3c;
}

.doodle table,
.doodle img {
  max-width: 100%;
}

.doodle table {
  overflow: scroll;
}

.doodle a {
  color: #1c1c1c;
  font-weight: bold;
}

.doodle ul li {
  list-style-type: "* ";
}

.doodle label {
  padding: 0.25em 0px;
  display: inline-block;
}

.doodle fieldset,
.doodle textarea {
  border-style: solid;
  border-width: 10px 10px 10px 10px;
  border-image: url(/svg/border_op.svg) 10 10 10 10 stretch stretch;
}

.doodle .border,
.doodle-border {
  border-style: solid;
  border-width: 10px 10px 10px 10px;
  border-image: url(/svg/button.svg) 10 10 10 10 stretch stretch;
}

.doodle hr {
  border-style: solid;
  border-width: 0px 3px 6px 3px;
  border-image: url(/svg/hr.svg) 0 3 6 3 stretch stretch;
}

.doodle blockquote {
  border-left-style: solid;
  border-width: 0px 6px 3px 6px;
  border-image: url(/svg/bq_op.svg) 0 6 3 6 stretch stretch;
  padding-left: 0.5em;
  border-right-width: 0px;
}

.doodle pre {
  overflow: auto;
}

.doodle table {
  border-collapse: collapse;
  overflow: auto;
  display: block;
}

.doodle table thead {
  border-bottom: 3px solid #bbb;
}

.doodle table caption {
  border-bottom-style: solid;
  border-width: 0px 3px 6px 3px;
  border-image: url(/svg/hr.svg) 0 3 6 3 stretch stretch;
}

.doodle table td {
  vertical-align: top;
}

.doodle img {
  border-radius: 3px;
  border-style: solid;
  border-width: 3px 3px 3px 3px;
  border-image: url(/svg/button.svg) 3 3 3 3 stretch stretch;
}

/* Made by 1hiking */

:root {
  height: 100vh;
}

body {
  display: flex;
  flex-direction: column;
  height: 100%;
  font-family: "Short Stack", cursive;
  margin: 0 10%;
  min-height: 100vh;
}

header {
  display: flex;
  flex-direction: row;
  justify-content: space-between;
  gap: 6px;
  align-items: flex-end;
  text-align: center;
}

.container-title-icon {
  display: flex;
  flex-direction: row;
  align-items: flex-end;
}

.container-title-icon > .site-title {
  font-size: 30px;
}

.container-taxonomy-menu {
  display: flex;
  flex-direction: row;
}

nav > a {
  font-size: 20px;
}

.List > h2 {
  display: flex;
  align-items: flex-end;
}

.List > h2::before {
  display: flex;
  content: "";
  background-image: url("/svg/star2_op.svg");
  background-size: 40px 40px;
  height: 40px;
  width: 40px;
}

.List > h2::after {
  display: flex;
  content: "";
  background-image: url("/svg/star2_op.svg");
  background-size: 40px 40px;
  height: 40px;
  width: 40px;
}

footer {
  display: flex;
  flex-direction: column;
  align-items: center;
  position: sticky;
  top: 100vh;
}

footer > p {
  margin: 0 auto;
}

.list-title > time::before {
  content: "- ";
}

.error404 {
  text-align: center;
}
@font-face {
  font-family: "Short Stack";
  src: url("/fonts/Short_Stack/ShortStack-Regular.ttf");
}

